--- a/HomeManager/HomeManager.csproj
+++ b/HomeManager/HomeManager.csproj
@@ -14,6 +14,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HomeMangager.Common\HomeMangager.Common.csproj" />
+    <ProjectReference Include="..\HomeMangager.DAL\HomeMangager.DAL.csproj" />
+    <ProjectReference Include="..\HomeMangager.Model\HomeMangager.Model.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Images\Background.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
