--- a/HomeManager/HomeManager.csproj
+++ b/HomeManager/HomeManager.csproj
@@ -30,12 +30,21 @@
 
   <ItemGroup>
     <Folder Include="Messages\" />
-    <Folder Include="Extensions\" />
-    <Folder Include="Converter\" />
-    <Folder Include="Behaviors\" />
     <Folder Include="Services\" />
     <Folder Include="Utilities\" />
-    <Folder Include="ViewModel\" />
+    <Folder Include="ViewModel\Dagboek\" />
+    <Folder Include="ViewModel\Budget\" />
+    <Folder Include="ViewModel\Homepage\" />
+    <Folder Include="ViewModel\StickyNotes\" />
+    <Folder Include="ViewModel\Security\" />
+    <Folder Include="ViewModel\Todo\" />
+    <Folder Include="ViewModel\Personen\" />
+    <Folder Include="View\Dagboek\" />
+    <Folder Include="View\Budget\" />
+    <Folder Include="View\Homepage\" />
+    <Folder Include="View\StickyNotes\" />
+    <Folder Include="View\Security\" />
+    <Folder Include="View\Todo\" />
   </ItemGroup>
 
 </Project>
