Add folders to DAL and MODEL

--- a/HomeMangager.DAL/HomeMangager.DAL.csproj
+++ b/HomeMangager.DAL/HomeMangager.DAL.csproj
@@ -42,4 +42,14 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dagboek\" />
+    <Folder Include="Budget\" />
+    <Folder Include="Homepage\" />
+    <Folder Include="StickyNotes\" />
+    <Folder Include="Security\" />
+    <Folder Include="Todo\" />
+    <Folder Include="Personen\" />
+  </ItemGroup>
+
 </Project>
