--- a/HomeMangager.DAL/App.config
+++ b/HomeMangager.DAL/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="HomeMangager.DAL.Properties.Connection.ConnectionDB"
-            connectionString="Data Source=192.168.0.110;Initial Catalog=HomeManager;Persist Security Info=True;User ID=sa;Password=jq2pBx8hETp6ZFrBe&amp;@%;TrustServerCertificate=True"
+            connectionString="Data Source=knoopsr.ddns.net,9210;Initial Catalog=HomeManager;Persist Security Info=True;User ID=sa;Password=jq2pBx8hETp6ZFrBe&amp;@%;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
