--- a/HomeManager/HomeManager.csproj
+++ b/HomeManager/HomeManager.csproj
@@ -14,9 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HomeMangager.Common\HomeMangager.Common.csproj" />
-    <ProjectReference Include="..\HomeMangager.DAL\HomeMangager.DAL.csproj" />
-    <ProjectReference Include="..\HomeMangager.Model\HomeMangager.Model.csproj" />
+    <ProjectReference Include="..\HomeMangager.Common\HomeManager.Common.csproj" />
+    <ProjectReference Include="..\HomeMangager.DAL\HomeManager.DAL.csproj" />
+    <ProjectReference Include="..\HomeMangager.Model\HomeManager.Model.csproj" />
   </ItemGroup>
 
   <ItemGroup>
