Rollenview en viewmodel

--- a/HomeManager/HomeManager.csproj
+++ b/HomeManager/HomeManager.csproj
@@ -36,7 +36,6 @@
     <Folder Include="ViewModel\Budget\" />
     <Folder Include="ViewModel\Homepage\" />
     <Folder Include="ViewModel\StickyNotes\" />
-    <Folder Include="ViewModel\Security\" />
     <Folder Include="ViewModel\Todo\" />
     <Folder Include="ViewModel\Personen\" />
     <Folder Include="View\Dagboek\" />
@@ -44,6 +43,10 @@
     <Folder Include="View\Homepage\" />
     <Folder Include="View\StickyNotes\" />
     <Folder Include="View\Todo\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
   </ItemGroup>
 
 </Project>
