--- a/HomeMangager.Model/HomeManager.Model.csproj
+++ b/HomeMangager.Model/HomeManager.Model.csproj
@@ -10,10 +10,13 @@
     <Folder Include="Homepage\" />
     <Folder Include="Budget\" />
     <Folder Include="Dagboek\" />
-    <Folder Include="Personen\" />
     <Folder Include="Todo\" />
     <Folder Include="Security\" />
     <Folder Include="StickyNotes\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HomeMangager.Common\HomeManager.Common.csproj" />
   </ItemGroup>
 
 </Project>
