--- a/HomeMangager.Model/HomeManager.Model.csproj
+++ b/HomeMangager.Model/HomeManager.Model.csproj
@@ -15,4 +15,8 @@
     <Folder Include="StickyNotes\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HomeMangager.Common\HomeManager.Common.csproj" />
+  </ItemGroup>
+
 </Project>
