collecties view kickstart

--- a/HomeMangager.DAL/HomeManager.DAL.csproj
+++ b/HomeMangager.DAL/HomeManager.DAL.csproj
@@ -12,19 +12,25 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HomeMangager.Common\HomeManager.Common.csproj" />
     <ProjectReference Include="..\HomeMangager.Model\HomeManager.Model.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Properties\Connection.Designer.cs">
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Connection.settings</DependentUpon>
-    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Properties\Connection.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Connection.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Properties\Connection.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Connection.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 
@@ -33,13 +39,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Properties\Connection.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
+    <EmbeddedResource Update="Properties\Connection.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Connection.Designer.cs</LastGenOutput>
-    </None>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
@@ -48,7 +51,6 @@
     <Folder Include="Homepage\" />
     <Folder Include="StickyNotes\" />
     <Folder Include="Security\" />
-    <Folder Include="Todo\" />
     <Folder Include="Personen\" />
   </ItemGroup>
 
