--- a/HomeMangager.Model/HomeManager.Model.csproj
+++ b/HomeMangager.Model/HomeManager.Model.csproj
@@ -11,9 +11,14 @@
     <Folder Include="Budget\" />
     <Folder Include="Dagboek\" />
     <Folder Include="Personen\" />
-    <Folder Include="Todo\" />
     <Folder Include="Security\" />
     <Folder Include="StickyNotes\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="HomeManager.Common">
+      <HintPath>..\HomeManager\bin\Debug\net8.0-windows\HomeManager.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
