--- a/HomeMangager.Model/HomeManager.Model.csproj
+++ b/HomeMangager.Model/HomeManager.Model.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HomeMangager.Common\HomeManager.Common.csproj" />
   </ItemGroup>
 
