--- a/HomeManager/HomeManager.csproj
+++ b/HomeManager/HomeManager.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.104.2" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
 
     <ProjectReference Include="..\HomeMangager.Common\HomeManager.Common.csproj" />
